--- a/integrates/front/.eslintrc.json
+++ b/integrates/front/.eslintrc.json
@@ -163,10 +163,16 @@
      */
     "fp/no-unused-expression": "off",
     "fp/no-nil": "off",
+    "import/export": "error",
     "import/no-absolute-path": ["error", { "commonjs": false }],
     "import/no-cycle": ["error", { "ignoreExternal": true }],
     "import/no-deprecated": "error",
+    "import/no-extraneous-dependencies": [
+      "error",
+      { "optionalDependencies": false }
+    ],
     "import/no-named-as-default": "error",
+    "import/no-named-default": "error",
     "import/no-self-import": "error",
     "import/no-useless-path-segments": ["error", { "noUselessIndex": true }],
     "import/no-webpack-loader-syntax": "error",
