--- a/integrates/front/package.json
+++ b/integrates/front/package.json
@@ -52,6 +52,7 @@
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
     "apollo-link-error": "1.1.13",
+    "apollo-link-http-common": "0.2.16",
     "apollo-link-ws": "1.0.20",
     "apollo-upload-client": "13.0.0",
     "apollo-utilities": "1.3.4",
