--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 include:
   - local: forces/.gitlab-ci.yml
   - local: reviews/.gitlab-ci.yml
+  - local: skims/.gitlab-ci.yml
 
 stages:
   - rotation
@@ -21,7 +22,6 @@ stages:
 .commit_stages:
   - &all_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|reviews|skims)/'
   - &integrates_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|integrates)/'
-  - &skims_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|skims)/'
 
 .in_everywhere_except_periodic_jobs_and_mrs_integrates: &in_everywhere_except_periodic_jobs_and_mrs_integrates
   rules:
@@ -117,40 +117,6 @@ stages:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: never
     - if: *all_commit_pattern
-
-.skims_in_dev_branch: &skims_in_dev_branch
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-      when: never
-    - if: *skims_commit_pattern
-
-.skims_in_dev_and_master_branch: &skims_in_dev_and_master_branch
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-      when: never
-    - if: *skims_commit_pattern
-
-.skims_in_master_branch: &skims_in_master_branch
-  rules:
-    - if: '$CI_COMMIT_BRANCH != "master"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-      when: never
-    - if: *skims_commit_pattern
 
 .analytics_template: &analytics_template
   <<: *with_nix
@@ -630,45 +596,3 @@ reviews:
   stage: merge-request
   <<: *in_mrs
   interruptible: false
-
-.skims_doc: &skims_doc
-  <<: *with_nix
-  <<: *skims_in_master_branch
-  artifacts:
-    paths: [public/]
-  script:
-    - ./build.sh skims_doc
-  stage: deploy-app
-
-skims_deploy:
-  <<: *with_nix
-  <<: *skims_in_master_branch
-  stage: deploy-app
-
-skims_lint:
-  <<: *with_nix
-  <<: *skims_in_dev_and_master_branch
-  stage: lint-code
-
-skims_security:
-  <<: *with_nix
-  <<: *skims_in_dev_and_master_branch
-  stage: test-security
-
-skims_structure:
-  <<: *with_nix
-  <<: *skims_in_dev_and_master_branch
-  artifacts:
-    expire_in: 1 week
-    paths:
-      - skims/*.svg
-    when: on_success
-  stage: test-code
-
-skims_test:
-  <<: *with_nix
-  <<: *skims_in_dev_branch
-  stage: test-code
-
-pages:
-  <<: *skims_doc
