--- a/integrates/front/.eslintrc.json
+++ b/integrates/front/.eslintrc.json
@@ -164,8 +164,11 @@
     "fp/no-unused-expression": "off",
     "fp/no-nil": "off",
     "import/export": "error",
+    "import/first": "error",
+    "import/newline-after-import": "error",
     "import/no-absolute-path": ["error", { "commonjs": false }],
     "import/no-cycle": ["error", { "ignoreExternal": true }],
+    "import/no-default-export": "error",
     "import/no-deprecated": "error",
     "import/no-extraneous-dependencies": [
       "error",
@@ -173,6 +176,7 @@
     ],
     "import/no-named-as-default": "error",
     "import/no-named-default": "error",
+    "import/no-namespace": "error",
     "import/no-self-import": "error",
     "import/no-useless-path-segments": ["error", { "noUselessIndex": true }],
     "import/no-webpack-loader-syntax": "error",
