--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -42,6 +42,7 @@ aioextensions = "20.8.1478538"
 aiofiles = "0.5.0"
 aiogqlc = "1.0.5"
 aiohttp = "3.6.2"
+bugsnag = "3.8.0"
 click = "7.1.2"
 confuse = "1.3.0"
 frozendict = "1.2"
@@ -50,6 +51,7 @@ more-itertools = "8.4.0"
 pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
+requests = "2.24.0"
 ruamel-yaml = "0.16.10"
 semver = "2.10.2"
 uvloop = "0.14.0"
