forces\feat(back): #2261.39 wrap forces to use aws keys
- Obtain the forces api token from aws secret management
  with the aws keys of each client to run the new forces


Former-commit-id: 88042ca9e540a9f2330ff424336cb0b3dc2f86d9

--- a/forces/Dockerfile
+++ b/forces/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster
+FROM python:3.8-slim-buster as forces
 
 RUN apt update
 
@@ -9,3 +9,13 @@ COPY . /pakage
 WORKDIR /pakage
 
 RUN pip install .
+
+FROM forces as break_build
+
+RUN pip install boto3
+
+WORKDIR /forces
+
+COPY break_build.py .
+
+ENTRYPOINT ["python3", "/forces/break_build.py"]
