integrates\style(front): #1719.71 grouped exports
Former-commit-id: 9fb3b2e771064680a11eb162aa75f8706bc0b4ff

--- a/integrates/front/.eslintrc.json
+++ b/integrates/front/.eslintrc.json
@@ -165,6 +165,7 @@
     "fp/no-nil": "off",
     "import/export": "error",
     "import/first": "error",
+    "import/group-exports": "error",
     "import/newline-after-import": "error",
     "import/no-absolute-path": ["error", { "commonjs": false }],
     "import/no-cycle": ["error", { "ignoreExternal": true }],
