refac(job): #508.1 use regular machine
Closes #508


Former-commit-id: 0cf9cce22ee6593fc82195fa4d6b4a0e463ab35f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -137,7 +137,7 @@ analytics_mandrill:
 
 analytics_gitlab:
   <<: *with_nix
-  tags: [autoscaling-analytics]
+  tags: [autoscaling]
   stage: analytics
   only:
     refs: [schedules]
