integrates\style(front): #1719.72 exports last
Former-commit-id: 77928a59b07d88c31d98723dcaa6db681343ae37

--- a/integrates/front/.eslintrc.json
+++ b/integrates/front/.eslintrc.json
@@ -164,6 +164,7 @@
     "fp/no-unused-expression": "off",
     "fp/no-nil": "off",
     "import/export": "error",
+    "import/exports-last": "error",
     "import/first": "error",
     "import/group-exports": "error",
     "import/newline-after-import": "error",
