feat(back): #509.1 add certificates service
- Add certificates service with both prod and eph certificates
- Add provisioners
- Add jobs


Former-commit-id: a36119abe66b2f8b8d91b16f6449f4ad89ee5253

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -293,6 +293,16 @@ apply_infra_secret_management:
   <<: *in_master_branch
   stage: deploy
 
+test_infra_certificates:
+  <<: *with_nix
+  <<: *in_dev_branch
+  stage: test
+
+apply_infra_certificates:
+  <<: *with_nix
+  <<: *in_master_branch
+  stage: deploy
+
 test_user_provision_asserts_dev:
   <<: *with_nix
   <<: *in_dev_branch
