--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -4,5 +4,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/utils.ts
 !src/scenes/Dashboard/**/hooks.ts
 !src/scenes/Dashboard/*.*
+!src/scenes/Dashboard/components/AddAccessTokenModal/index.tsx
 src/**/*.css.d.ts
 src/**/*.d.ts
