--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ stages:
   - scheduler
 
 .commit_stages:
-  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|reviews|skims)/'
+  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|reviews|serves|skims)/'
 
 .common_in_mrs: &common_in_mrs
   rules:
