integrates\feat(job): #2261.41 remove deprecated param
Former-commit-id: 9f18aafbbbcbc9ee52cf707c3a0f286a174715cc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,6 +107,6 @@ common_forces:
     name: fluidattacks/forces:new
     entrypoint: [""]
   script:
-    - forces --token "${INTEGRATES_API_TOKEN}" --strict --group daimon -vv
+    - forces --token "${FORCES_API_TOKEN}" --strict -vv
   interruptible: true
   allow_failure: true
