feat(job): #500.2 remove deprecated param
Former-commit-id: 09ba15415a045f0df1550fa7c7935eabc3d074be

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -461,7 +461,7 @@ test_forces_new:
     name: fluidattacks/forces:new
     entrypoint: [""]
   script:
-    - forces --token "${INTEGRATES_API_TOKEN}" --strict --group rockland -vv
+    - forces --token "${FORCES_API_TOKEN}" --strict -vv
   interruptible: true
   allow_failure: true
 
