integrates\feat(build): #2166.5 devicefarm config
- simplify appium command
- device pool and environment config files


Former-commit-id: f3524541d093f5495a46203e4aa0c9de23e7134d

--- a/integrates/.gitignore
+++ b/integrates/.gitignore
@@ -14,8 +14,8 @@ mobile/npm-debug.*
 mobile/certs
 mobile/google-services.json
 mobile/output/*
-mobile/e2e/*.apk
-mobile/e2e/*.zip
+mobile/e2e/**/*.apk
+mobile/e2e/**/*.zip
 
 #coverage output
 front/.nyc_output
