serves\feat(build): #2440.8 infra test jobs
- Turn on infra test jobs
- Fix some helper names
- Create SERVES_PROD and SERVES_DEV aws credentials
- Prepare serves aws login to use new vars
- Prepare serves rotation to rotate SERVES_DEV vars
- Upgrade nix stable pkgs in order to have terraform 0.12.24
- Update some serves provisioners to use the newer version
of pythonPackage builder


Former-commit-id: 9550be99ee2696a583a30335d0de689703133143

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ include:
   - local: forces/.gitlab-ci.yml
   - local: integrates/.gitlab-ci.yml
   - local: reviews/.gitlab-ci.yml
+  - local: serves/.gitlab-ci.yml
   - local: skims/.gitlab-ci.yml
 
 stages:
