--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -70,6 +70,51 @@ serves_test_infra_secret_management:
   <<: *in_dev_branch_serves
   stage: test-infra
 
+serves_test_user_provision_asserts_dev:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_asserts_prod:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_services_dev:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_services_prod:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_integrates_dev:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_integrates_prod:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_web_dev:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_web_prod:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
+serves_test_user_provision_serves:
+  <<: *with_nix
+  <<: *in_dev_branch_serves
+  stage: test-infra
+
 serves_apply_infra_monolith:
   <<: *with_nix
   <<: *in_master_branch_serves
