--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -1,5 +1,5 @@
 # Default approvers
-* @mnorenaatfluid @jrestrepoatfluid @ralvarezatfluid @kamadoatfluid
+* @dsalazaratfluid @jrestrepoatfluid @kamadoatfluid @mnorenaatfluid @ralvarezatfluid
 
 # Front approvers
 /integrates/front/ @dacevedoatfluid @mnorenaatfluid @jrestrepoatfluid @kamadoatfluid
