--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -1,3 +1,9 @@
+.with_nix_serial: &with_nix_serial
+  tags: [autoscaling]
+  image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
+  script:
+    - ./build.sh "${CI_JOB_NAME% *}"
+
 .with_nix: &with_nix
   tags: [autoscaling]
   image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
@@ -262,3 +268,140 @@ serves_rotate_keys_user_provision_serves:
   <<: *with_nix
   <<: *serves_in_schedule_rotate_keys_user_provision
   stage: rotation
+
+analytics_formstack:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_formstack]
+  interruptible: false
+
+analytics_dynamodb:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_dynamodb]
+  interruptible: false
+
+analytics_services_toe:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_services_toe]
+  interruptible: false
+
+analytics_infrastructure:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_infrastructure]
+  interruptible: false
+
+analytics_intercom:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_intercom]
+  interruptible: false
+
+analytics_mandrill:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_mandrill]
+  interruptible: false
+
+analytics_gitlab:
+  <<: *with_nix
+  tags: [autoscaling]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_gitlab]
+  interruptible: false
+
+analytics_timedoctor:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_timedoctor]
+  interruptible: false
+
+analytics_zoho:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_zoho]
+  interruptible: false
+
+analytics_git_process:
+  <<: *with_nix_serial
+  image: "${CI_REGISTRY_IMAGE}/nix:analytics_git_process"
+  tags: [autoscaling-analytics]
+  stage: analytics
+  artifacts:
+    paths:
+      - artifacts/
+    when: always
+    expire_in: 1 day
+  parallel: 50
+  only:
+    refs: [schedules]
+    variables: [$analytics_git_process]
+  interruptible: false
+
+analytics_git_upload:
+  <<: *with_nix_serial
+  tags: [autoscaling-analytics]
+  stage: analytics-upload
+  artifacts:
+    paths:
+      - artifacts/
+    when: always
+    expire_in: 1 day
+  only:
+    refs: [schedules]
+    variables: [$analytics_git_upload]
+  interruptible: false
+
+analytics_timedoctor_refresh_token:
+  <<: *with_nix
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_timedoctor_refresh_token]
+  interruptible: false
+
+analytics_timedoctor_backup:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_timedoctor_backup]
+  interruptible: false
+
+analytics_services_repositories_cache:
+  <<: *with_nix
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$analytics_services_repositories_cache]
+  interruptible: false
