serves\fix(job): #2960.1 artifacts path
Closes #2960


Former-commit-id: 743c41ec54d616299bebe12d9ad5fec1eca12271

--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -372,7 +372,7 @@ analytics_git_upload:
   stage: analytics-upload
   artifacts:
     paths:
-      - artifacts/
+      - serves/artifacts/
     when: always
     expire_in: 1 day
   only:
