--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -357,7 +357,7 @@ analytics_git_process:
   stage: analytics
   artifacts:
     paths:
-      - artifacts/
+      - serves/artifacts/
     when: always
     expire_in: 1 day
   parallel: 50
