--- a/theme/2020/package.json
+++ b/theme/2020/package.json
@@ -22,7 +22,7 @@
     "gsap": "3.4.2",
     "iframe-resizer": "4.2.11",
     "intl-tel-input": "14.0.10",
-    "jquery": "^3.3.1",
+    "jquery": "3.5.1",
     "terser-webpack-plugin": "2.3.2",
     "tslint": "5.18.0",
     "ts-loader": "6.2.1",
