observes\feat(build): #2959.1 jobs and helpers
- Create files for jobs and helpers
- Take them out of serves


Former-commit-id: 70884559fa4132b5767954b2d282d8b5749e3bd2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ stages:
   - scheduler
 
 .commit_stages:
-  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|reviews|serves|skims)/'
+  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|observes|reviews|serves|skims|sorts)/'
 
 .common_in_mrs: &common_in_mrs
   rules:
