--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 include:
   - local: forces/.gitlab-ci.yml
   - local: integrates/.gitlab-ci.yml
+  - local: observes/.gitlab-ci.yml
   - local: reviews/.gitlab-ci.yml
   - local: serves/.gitlab-ci.yml
   - local: skims/.gitlab-ci.yml
