observes\feat(build): #2959.5 linter
- Add lint job
- Remove python linter from serves
as no there are no longer py files


Former-commit-id: cabd73896935e5d44de31698229bd89cdae998d2

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -14,6 +14,23 @@
 
 .observes_commit_pattern: &observes_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|observes)/'
 
+.observes_in_dev_branch: &observes_in_dev_branch
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: *observes_commit_pattern
+
+observes_lint_code:
+  <<: *with_nix
+  <<: *observes_in_dev_branch
+  stage: lint-code
+
 observes_formstack:
   <<: *with_nix
   tags: [autoscaling-analytics]
