--- a/serves/.gitlab-ci.yml
+++ b/serves/.gitlab-ci.yml
@@ -272,3 +272,8 @@ serves_rotate_keys_user_provision_serves:
   <<: *with_nix
   <<: *serves_in_schedule_rotate_keys_user_provision
   stage: rotation
+
+serves_rotate_keys_user_provision_observes:
+  <<: *with_nix
+  <<: *serves_in_schedule_rotate_keys_user_provision
+  stage: rotation
