integrates\style(front): #1719.77 linted api_token_modal
Former-commit-id: fe412d57df3cb7aa28fb90f3a2ea2564f07cf1eb

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -4,6 +4,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/utils.ts
 !src/scenes/Dashboard/**/hooks.ts
 !src/scenes/Dashboard/*.*
-!src/scenes/Dashboard/components/APITokenModal/index.tsx
+!src/scenes/Dashboard/components/APITokenModal/**
 src/**/*.css.d.ts
 src/**/*.d.ts
