--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -5,5 +5,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/hooks.ts
 !src/scenes/Dashboard/*.*
 !src/scenes/Dashboard/components/APITokenModal/**
+!src/scenes/Dashboard/components/AddEnvironmentsModal/index.spec.tsx
 src/**/*.css.d.ts
 src/**/*.d.ts
