--- a/integrates/.gitlab-ci.yml
+++ b/integrates/.gitlab-ci.yml
@@ -362,6 +362,14 @@ integrates_functional_tests_prod:
       - integrates/test/functional/screenshots/
     when: always
 
+integrates_functional_tests_mobile:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch_integrates
+  needs:
+    - integrates_deploy_k8s_back_ephemeral
+    - integrates_deploy_mobile_ota
+  stage: post-deploy
+
 integrates_infra_backup_deploy:
   <<: *with_nix
   <<: *in_master_branch_integrates
