integrates\refac(front): #1719.80 splitted add_envs_modal
Former-commit-id: a7f7d405add88696a3d5dd2436ef8c81af231b16

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -5,6 +5,6 @@ src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/hooks.ts
 !src/scenes/Dashboard/*.*
 !src/scenes/Dashboard/components/APITokenModal/**
-!src/scenes/Dashboard/components/AddEnvironmentsModal/index.spec.tsx
+!src/scenes/Dashboard/components/AddEnvironmentsModal/**
 src/**/*.css.d.ts
 src/**/*.d.ts
