reviews\refac(build): #1067.1 update project
- Update project_id
- Update integrates links
- Temporarily disable reviews


Former-commit-id: af4816f850c7222aad6ffb21efa3b3b87c6905af

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,7 +95,7 @@ common_lint_commit_msg:
   <<: *common_in_dev_branch
   stage: lint-code
 
-reviews:
+.reviews:
   <<: *with_nix
   <<: *common_in_mrs
   stage: merge-request
