observes\fix(build): #55.13 git schedule image
Former-commit-id: 33748c988fbbb5741e09112d8238e14795c6010f

--- a/observes/.gitlab-ci.yml
+++ b/observes/.gitlab-ci.yml
@@ -136,7 +136,7 @@ observes_zoho:
 
 observes_git_process:
   <<: *with_nix_serial
-  image: "${CI_REGISTRY_IMAGE}/nix:analytics_git_process"
+  image: "${CI_REGISTRY_IMAGE}/nix:observes_git_process"
   tags: [autoscaling-analytics]
   stage: analytics
   artifacts:
