all\feat(conf): #2978 sonarcloud exclusions
- Added exclusion for analysis over migration files and test files in
skims
- Changed exclusion for duplications since front is in another folder
and there are more files where it should ignore duplications
- Fixed get_repository_metadata test


Former-commit-id: 68767239ec134a9c90c8285bb42f0ed76a2dfdb8

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -9,8 +9,18 @@ sonar.projectName=integrates
 # Path is relative to the sonarcloud.properties file. Defaults to .
 # sonar.sources=.
 
+# Exclusion for analysis
+sonar.exclusions=\
+    integrates/app/migrations/**/*,\
+    skims/test/data/**/*
+
 # Exclusion for duplications
-sonar.cpd.exclusions=front/**
+sonar.cpd.exclusions=\
+    integrates/analytics/generators/**/*,\
+    integrates/django-apps/integrates-back-async/backend/api/dataloaders/**/*,\
+    integrates/django-apps/integrates-back-async/backend/api/resolvers/**/*,\
+    integrates/front/**/*,\
+    integrates/mobile/**/*
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
