--- a/integrates/deploy/containers/app/requirements.txt
+++ b/integrates/deploy/containers/app/requirements.txt
@@ -1,6 +1,6 @@
 aioboto3==8.0.3
 aiodataloader==0.2.0
-aioextensions==20.8.792051
+aioextensions==20.8.2087641
 ariadne==0.12.0
 async_lru==1.0.2
 awscli==1.18.76
