asserts\feat(build): #2982.5 gitlab-ci
- Add basic gitlab-ci for asserts
- Remove some unused files


Former-commit-id: 10f125e05ae8f86803f3066c5522e931c57d882a

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 include:
+  - local: asserts/.gitlab-ci.yml
   - local: forces/.gitlab-ci.yml
   - local: integrates/.gitlab-ci.yml
   - local: observes/.gitlab-ci.yml
