--- a/asserts/.gitlab-ci.yml
+++ b/asserts/.gitlab-ci.yml
@@ -1,304 +1,21 @@
-stages:
-  - build
-  - test
-  - mr-test
-  - deploy
-  - release_to_pypi
-  - release_to_docker
-
-.in_dev_branch: &in_dev_branch
-  except:
-    refs:
-      - master
-      - triggers
-      - schedules
-
-.in_prod_branch: &in_prod_branch
-  only:
-    refs:
-      - master
-  except:
-    refs:
-      - triggers
-      - schedules
-
 .with_nix: &with_nix
   tags: [autoscaling]
-  image: "${CI_REGISTRY_IMAGE}/nix:$CI_JOB_NAME"
+  image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
   needs: []
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
 
-.in_schedule_nightly_build: &in_schedule_nightly_build
+.asserts_commit_pattern: &asserts_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|asserts)/'
+
+.in_dev_branch_asserts: &in_dev_branch_asserts
   rules:
-    - if: '$NIGHTLY_BUILD == "NIGHTLY_BUILD"'
-      when: always
-
-build_asserts:
-  <<: *with_nix
-  <<: *in_dev_branch
-  artifacts:
-    paths: [asserts-release/]
-  stage: test
-
-# For some reason our innovation account is empty!
-#   disabling until we recreate it or found how to revert changes
-.test_asserts_api_cloud_aws_api:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_cloud_aws_new:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_cloud_aws_cloudformation:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_cloud_aws_terraform:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_cloud_azure:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_cloud_gcp:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-.test_asserts_api_cloud_kubernetes:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_db_mssql:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_db_mysql:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_db_postgres:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_format:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-  tags: [autoscaling-large]
-
-test_asserts_api_helper:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_iot:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_core:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_csharp:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_docker:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_dotnetconfig:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_html:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_java:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_javascript:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_php:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_python:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_rpgle:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_lang_times:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_ot:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_dns:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_ftp:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_git:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_graphql:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_http:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_ldap:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_rest:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_smb:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_smtp:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_ssh:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_ssl:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_proto_tcp:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_sca:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_syst:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_asserts_api_utils:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_output_asserts:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-test_infra_secret_management:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_shell:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_nix:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_asserts:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_asserts_bandit:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-lint_asserts_tests:
-  <<: *with_nix
-  <<: *in_dev_branch
-  stage: test
-
-deploy_infra_secret_management:
-  <<: *with_nix
-  <<: *in_prod_branch
-  stage: deploy
-
-release_to_pypi:
-  <<: *with_nix
-  <<: *in_prod_branch
-  stage: release_to_pypi
-
-release_to_docker_hub:
-  <<: *with_nix
-  <<: *in_prod_branch
-  needs: [release_to_pypi]
-  stage: release_to_docker
-
-pages:
-  <<: *with_nix
-  <<: *in_prod_branch
-  stage: deploy
-  artifacts:
-    paths: [public/]
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: *asserts_commit_pattern
