melts\feat(cross): #2984.4 renaming tools to melts
Former-commit-id: 15acd6fe0cf7bec85c39f28fa3f1836fd96f2072

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ stages:
   - scheduler
 
 .commit_stages:
-  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|asserts|forces|integrates|observes|reviews|serves|skims|sorts|tools)/'
+  - &common_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|asserts|forces|integrates|observes|reviews|serves|skims|sorts|melts)/'
 
 .common_in_mrs: &common_in_mrs
   rules:
