asserts\feat(build): #2982.11 linters
- Turn on linters
- Adapt provisioners
- Move asserts readme to fluidasserts
- Adapt asserts nix installation
- Adapt python pkgs builder
- Other minor changes


Former-commit-id: 31c9a1de77aafa8c8d31a54d24e9725d041f903f

--- a/asserts/.gitlab-ci.yml
+++ b/asserts/.gitlab-ci.yml
@@ -19,3 +19,18 @@
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
       when: never
     - if: *asserts_commit_pattern
+
+asserts_lint_code:
+  <<: *with_nix
+  <<: *in_dev_branch_asserts
+  stage: lint-code
+
+asserts_lint_code_bandit:
+  <<: *with_nix
+  <<: *in_dev_branch_asserts
+  stage: lint-code
+
+asserts_lint_tests:
+  <<: *with_nix
+  <<: *in_dev_branch_asserts
+  stage: lint-code
